feat/light-theme: Code cleanup

--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 						document.documentElement.dataset.theme = theme;
 					}
 				} catch (err) {
-					/* swallow */
+					console.warn(err);
 				}
 			})();
 		</script>
